지점별 자료수집
지점별 기상자료를 수집하여 csv파일에 저장

--- a/weather_data.ipynb
+++ b/weather_data.ipynb
@@ -4,13 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 위.경도별 일사량 검토\n",
-    "* 기상청의 지점별 위도 및 경도별 일사량을 DATA화"
+    "# 기상청 지점별(위.경도별) 일사량 자료 수집\n",
+    "* 기상청의 지점별 위도 및 경도별 일사량을 DATA화\n",
+    "\n",
+    "## Column 설명\n",
+    "* 지점     : 각 기상대 지점의 이름\n",
+    "* 월       : 기상자료의 해당 월(month)\n",
+    "* 평균기온 : 월간 평균기온\n",
+    "* 평균풍속 : 월간 평균풍속(m/s)\n",
+    "* 평균운량 : 월간 평균 구름의 량\n",
+    "* 일조시간합 : 월간 일조시간 합계(hr)\n",
+    "* 천천일사합 : 월간 일사량 합계(MJ/m2)\n",
+    "* 위      도 : 지점의 위도\n",
+    "* 경      도 : 지점의 경도\n",
+    "\n",
+    "## 참고자료\n",
+    "* 운량 : 10할 기준으로 맑음 : 0~2 , 구름조금 : 3~5, 구름많음 : 6~8, 흐림 : 9~10으로 정의  \n",
+    "* 일사량은 단위면적이 단위시간에 받는 일사에너지의 양으로 정의되며, 순간 복사량과 정해진 시간동안 단위면적이 받는 총열량인 복사량으로 표현됨  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,43 +39,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "93\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'168_93'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "stninfo = pd.read_csv(\"./stninfo.csv\",encoding='EUC-KR')\n",
-    "print(stninfo.iloc[1,0])\n",
-    "i = 1\n",
-    "jijum_name = str(stninfo.iloc[i,0])\n",
-    "lat = stninfo.iloc[i,3]\n",
-    "long = stninfo.iloc[i,4]\n",
-    "search_year = \"2018\"\n",
-    "jijum_name = \"168_\"+jijum_name\n",
-    "jijum_name"
+    "## 지점별 위치자료 입력"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stninfo = pd.read_csv(\"./stninfo.csv\",encoding='EUC-KR')\n",
+    "# 자료수집 년도 \n",
+    "search_year = \"2018\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +69,137 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "url = \"https://data.kma.go.kr/data/grnd/selectAsosRltmList.do\"\n",
-    "values = {\n",
+    "## 지점별 기상청 자료수집"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90 속초\n",
+      "93 북춘천\n",
+      "95 철원\n",
+      "98 동두천\n",
+      "99 파주\n",
+      "100 대관령\n",
+      "101 춘천\n",
+      "102 백령도\n",
+      "104 북강릉\n",
+      "105 강릉\n",
+      "106 동해\n",
+      "108 서울\n",
+      "112 인천\n",
+      "114 원주\n",
+      "115 울릉도\n",
+      "116 관악산\n",
+      "119 수원\n",
+      "121 영월\n",
+      "127 충주\n",
+      "129 서산\n",
+      "130 울진\n",
+      "131 청주\n",
+      "133 대전\n",
+      "135 추풍령\n",
+      "136 안동\n",
+      "137 상주\n",
+      "138 포항\n",
+      "140 군산\n",
+      "143 대구\n",
+      "146 전주\n",
+      "152 울산\n",
+      "155 창원\n",
+      "156 광주\n",
+      "159 부산\n",
+      "162 통영\n",
+      "164 무안\n",
+      "165 목포\n",
+      "168 여수\n",
+      "169 흑산도\n",
+      "170 완도\n",
+      "172 고창\n",
+      "174 순천\n",
+      "175 진도(첨찰산)\n",
+      "176 대구(기)\n",
+      "177 홍성\n",
+      "185 고산\n",
+      "187 성산\n",
+      "188 성산\n",
+      "189 서귀포\n",
+      "192 진주\n",
+      "201 강화\n",
+      "202 양평\n",
+      "203 이천\n",
+      "211 인제\n",
+      "212 홍천\n",
+      "214 삼척\n",
+      "216 태백\n",
+      "217 정선군\n",
+      "221 제천\n",
+      "226 보은\n",
+      "232 천안\n",
+      "235 보령\n",
+      "236 부여\n",
+      "238 금산\n",
+      "243 부안\n",
+      "244 임실\n",
+      "245 정읍\n",
+      "247 남원\n",
+      "248 장수\n",
+      "251 고창군\n",
+      "252 영광군\n",
+      "253 김해시\n",
+      "254 순창군\n",
+      "255 북창원\n",
+      "256 주암\n",
+      "257 양산시\n",
+      "258 보성군\n",
+      "259 강진군\n",
+      "260 장흥\n",
+      "261 해남\n",
+      "262 고흥\n",
+      "263 의령군\n",
+      "264 함양군\n",
+      "265 성산포\n",
+      "266 광양시\n",
+      "268 진도군\n",
+      "271 봉화\n",
+      "272 영주\n",
+      "273 문경\n",
+      "276 청송군\n",
+      "277 영덕\n",
+      "278 의성\n",
+      "279 구미\n",
+      "281 영천\n",
+      "283 경주시\n",
+      "284 거창\n",
+      "285 합천\n",
+      "288 밀양\n",
+      "289 산청\n",
+      "294 거제\n",
+      "295 남해\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기상청 자료수집 프로그램 모듈\n",
+    "stninfo_len = len(stninfo)\n",
+    "#stninfo_len = 3\n",
+    "for i in range(0, stninfo_len) :\n",
+    "    jijum_name = str(stninfo.iloc[i,0])\n",
+    "    lat = stninfo.iloc[i,3]\n",
+    "    long = stninfo.iloc[i,4]\n",
+    "    jijum_name = \"168_\"+jijum_name\n",
+    "    print(stninfo.iloc[i,0],stninfo.iloc[i,1])\n",
+    "    url = \"https://data.kma.go.kr/data/grnd/selectAsosRltmList.do\"\n",
+    "    values = {\n",
     "          'pgmNo':'36',\n",
     "          'cmmnCdList':'F00501,F00502,F00503,F00512,F00513',\n",
     "          'dataFormCd':'F00513',\n",
@@ -109,71 +231,36 @@
     "          'txtStnNm':\"추풍령\",\n",
     "          'upperCmmnCode':'F005'\n",
     "          }\n",
-    "params =  urllib.parse.urlencode(values)\n",
-    "url = url + \"?\"+params\n",
-    "browser.get(url)\n",
-    "time.sleep(5)\n",
+    "    params =  urllib.parse.urlencode(values)\n",
+    "    url = url + \"?\"+params\n",
+    "    browser.get(url)\n",
+    "    time.sleep(5)\n",
     "\n",
-    "html = browser.page_source"
+    "    html = browser.page_source\n",
+    "    #가상브라우져에서 해당  Html파일을 추출한다.\n",
+    "    weather_data_temp = pd.read_html(html,header=0)\n",
+    "    weather_data_temp = pd.DataFrame(weather_data_temp[1])\n",
+    "\n",
+    "    weather_data_temp['위도'] = lat\n",
+    "    weather_data_temp['경도'] = long\n",
+    "    weather_data_temp['시간'] = 1,2,3,4,5,6,7,8,9,10,11,12\n",
+    "\n",
+    "    if i < 1 :\n",
+    "        weather_data = weather_data_temp\n",
+    "    else :\n",
+    "        weather_data = pd.concat([weather_data, weather_data_temp], axis=0)\n",
+    "    \n",
+    "browser.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "북춘천(93) 1 -6.0 1.3 3.9 203.0 297.61\n",
-      "북춘천(93) 2 -3.4 1.5 3.6 214.2 345.45\n",
-      "북춘천(93) 3 7.0 1.8 4.6 204.3 434.45\n",
-      "북춘천(93) 4 12.0 1.9 4.9 218.7 505.89\n",
-      "북춘천(93) 5 17.2 1.7 5.4 233.2 577.58\n",
-      "북춘천(93) 6 22.6 1.5 5.6 252.8 628.31\n",
-      "북춘천(93) 7 26.3 1.3 5.0 243.9 520.07\n",
-      "북춘천(93) 8 26.9 1.3 6.1 223.0 464.48\n",
-      "북춘천(93) 9 19.1 1.1 5.4 205.5 397.14\n",
-      "북춘천(93) 10 10.3 1.1 4.5 200.3 314.48\n",
-      "북춘천(93) 11 5.1 0.7 5.1 148.2 206.42\n",
-      "북춘천(93) 12 -3.2 1.0 3.9 194.9 216.07\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "#가상브라우져에서 해당  Html파일을 추출한다.\n",
-    "weather_data = pd.read_html(html,header=0)\n",
-    "weather_data = pd.DataFrame(weather_data[1])\n",
-    "browser.quit()\n",
-    "\n",
-    "weather_data['위도'] = lat\n",
-    "weather_data['경도'] = long\n",
-    "weather_data['시간'] = 1,2,3,4,5,6,7,8,9,10,11,12\n",
-    "\n",
-    "row=98\n",
-    "\n",
-    "for col in range(0,12) :\n",
-    "    print( weather_data.iloc[col,0],col+1, weather_data.iloc[col,2],weather_data.iloc[col,3],weather_data.iloc[col,4],weather_data.iloc[col,5],weather_data.iloc[col,6])\n",
-    "\n",
-    "#print(weather_data.iloc[0,2],weather_data.iloc[1,2],weather_data.iloc[2,2],weather_data.iloc[3,2],weather_data.iloc[4,2],weather_data.iloc[5,2],weather_data.iloc[6,2],weather_data.iloc[7,2],weather_data.iloc[8,2],weather_data.iloc[9,2],weather_data.iloc[10,2],weather_data.iloc[11,2])\n",
-    "#print(weather_data.iloc[0,3],weather_data.iloc[1,3],weather_data.iloc[2,3],weather_data.iloc[3,3],weather_data.iloc[4,3],weather_data.iloc[5,3],weather_data.iloc[6,3],weather_data.iloc[7,3],weather_data.iloc[8,3],weather_data.iloc[9,3],weather_data.iloc[10,3],weather_data.iloc[11,3])\n",
-    "    #print(row,col+1,  weather_data.iloc[col,0],weather_data.iloc[col,1],weather_data.iloc[col,2],weather_data.iloc[col,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "outputfile ='weather_data.csv'\n",
-    "weather_data.to_csv(outputfile, encoding='EUC-KR', index=False)\n",
-    "\n",
-    "\n",
-    "browser.quit()"
+    "weather_data.to_csv(outputfile, encoding='EUC-KR', index=False)"
    ]
   },
   {
